app/stylesheets/main.styl
@import 'nib'
@import 'util'

//
// FONTS
//

$serif = "skolar", Caslon, Baskerville, Palatino, "Palatino Linotype", "Hoefler Text", Garamond, "URW Palladio L", "Book Antiqua", Georgia, serif
$sans-serif = "proxima-nova", Helvetica, sans-serif
$title-font = "ff-prater-script-web", $serif

//
// COLORS
//

$red = #E0162B
$blue = #41B7D8

$lightestGray = #EEE
$lighterGray = #CCC
$lightGray = #999
$gray = #666
$darkGray = #555
$darkerGray = #333


//
// STRUCTURE AND TYPOGRAPHY
//

*
  box-sizing: border-box
  line-height: 1.4em

html
  font-size: 10px
  overflow-y: scroll

body
  color: $darkerGray
  font-family: $sans-serif
  font-size: 1.6rem
  margin: 0
  max-width: 1800px
  padding: 0
  position: relative
  -webkit-font-smoothing: antialiased

img
  max-width: 100%

ul, ol
  list-style-type: none
  margin: 0
  padding: 0

a
  {$link}
    color: $blue
    text-decoration: none

  {$focus}
    text-decoration: underline

h1, h2, h3, h4, h5
  font-family: $serif
  font-weight: bold
  line-height: 1.2em
h1
  font-size: 3.2rem
h2
  font-size: 2.4rem
h3
  font-size: 2.0rem
h4
  font-size: 1.8rem
h5
  font-size: 1.6rem

p
  margin: 1em 0


//
// HEADER
//

$headerHeight = 50px
$headerBorder = 3px solid #000

#header
  background: #FFF
  border-bottom: 1px solid $lighterGray
  height: $headerHeight
  left: 0
  position: fixed
  top: 0
  width: 100%

  ul
    position: absolute
    top: 0

    &.left
      left: 0

      li a
        {$link}
          border-right: 1px solid $lighterGray
        {$focus}
          border: $headerBorder
          padding: 14px 16px 0 15px

    &.right
      right: 0

      li a
        {$link}
          border-left: 1px solid $lighterGray
        {$focus}
          border: $headerBorder
          padding: 14px 15px 0 16px
        &.on
          background-color: #000
          border: $headerBorder
          height: $headerHeight // to cover up 1px gray bottom border
          padding: 14px 15px 0 16px
          color: #FFF

    li
      float: left
      font-weight: bold
      font-size: 1.35rem
      line-height: 1.0em
      text-transform: uppercase

      a
        {$link}
          color: #000
          display: block
          height: $headerHeight - 1
          padding: 17px 18px 0 18px
        {$focus}
          text-decoration: none

        &.current
          {$link}
            color: $red

  .search
    font-weight: normal
    padding: 3px
    text-transform: none
    // width: 100%

    {$focus}
      border: $headerBorder
      padding: 0

    input
      border: 0
      font-size: 1.4rem
      height: $headerHeight - 7
      outline: 0
      padding-left: 20px
      width: 100%

    ::-webkit-input-placeholder
      color: #000
    :-moz-placeholder
      color: #000


//
// BROWSE
//

#browseWrapper
  background-color: #000
  padding: 0 30px
  position: fixed
  top: $headerHeight
  width: 100%

#browse
  height: 0
  padding: 0
  overflow: hidden
  z-index: 10

  transition-property: padding, height
  transition-duration: .5s

  &.on
    height: 320px
    padding: 30px 0

    transition-property: padding, height
    transition-duration: .5s

  & > li
    border-right: 1px solid $darkerGray
    display: inline-block
    padding: 0 15px
    vertical-align: top
    width: 32%

    &:last-child
      border-right: 0

    h2
      font-size: 1.9rem
      margin-top: 0
      text-transform: uppercase

    li
      font-family: $serif
      margin: 5px 0

  a
    {$link}
      color: #FFF
      display: block
      overflow: hidden
      text-overflow: ellipsis
      white-space: nowrap
      width: 100%


//
// CONTAINER
//

#container
  margin-top: 90px


//
// CONTENT
//

$sidebarWidth = 336px
$sidebarMarginLeft = 100px
$sidebarMarginRight = 20px

#contentWrapper
  float: left
  padding-left: 131px
  margin-right: - ($sidebarWidth + $sidebarMarginLeft + $sidebarMarginRight)
  padding-bottom: 50px
  width: 100%

#content
  margin-right: ($sidebarWidth + $sidebarMarginLeft + $sidebarMarginRight)

  h1
    border-bottom: 1px solid $lightestGray
    margin: 10px 0 30px 0
    padding-bottom: 20px

  ul, ol
    list-style-type: disc
    margin: 0
    padding-left: 20px


.breadcrumbs
  font-size: 1.5rem
  font-weight: bold
  text-transform: uppercase

  .divider::before
    content: '\2192'
    margin: 0 7px



//
// SIDEBAR
//

#sidebar
  // background: url('/images/sidebar.gif')
  float: right
  margin: 0 $sidebarMarginRight 0 $sidebarMarginLeft
  width: $sidebarWidth
  height: 100px


//
// FOOTER
//

#footer
  clear: both
  width: 100%

